@@ -1,5 +1,5 @@
 // L2TPNS Global Stuff
-// $Id: l2tpns.h,v 1.105 2005-12-07 05:21:37 bodea Exp $
+// $Id: l2tpns.h,v 1.106 2005-12-09 00:43:17 bodea Exp $
 
 #ifndef __L2TPNS_H__
 #define __L2TPNS_H__
@@ -15,7 +15,7 @@
 #include <sys/types.h>
 #include <libcli.h>
 
-#define VERSION	"2.1.13"
+#define VERSION	"2.1.14"
 
 // Limits
 #define MAXTUNNEL	500		// could be up to 65535
